moving to non blockin nio to try to make it rad. (not working commit - getting sleepy)